feat: add custom app error
